--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "electron": "28.0.0",
     "interactjs": "^1.10.20",
     "papaparse": "^5.4.1"
   }
